src/tests/snapshots/gitu__tests__push__force_push.snap
---
source: src/tests/push.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                                                         |
▌Your branch is up to date with 'origin/main'.                                                                          |
                                                                                                                        |
 Recent commits                                                                                                         |
 e7eb2bd main origin/main add new-file                                                                   Author Name __ |
 b66a0bf add initial-file                                                                                Author Name __ |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────|
$ git push --force-with-lease origin refs/heads/main:refs/heads/main                                                    |
To file://                                                                                                               
   b66a0bf..e7eb2bd  main -> main                                                                                       |
styles_hash: a1e4c48222379879
