src/tests/snapshots/gitu__tests__push__open_push_menu_after_dash_input.snap
---
source: src/tests/push.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Recent commits                                                                 |
 e7eb2bd main add new-file                                       Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Push                             Arguments                                     |
 p     pushRemote, setting that   -n Dry run (--dry-run)                        |
 u     to origin/main             -F Force (--force)                            |
 e     to elsewhere               -f Force with lease (--force-with-lease)      |
 q/esc Quit/Close                 -h Disable hooks (--no-verify)                |
styles_hash: ab6a41ee8fc8fc92
